  * Shorten some hard-formatted lines for a better display
    Closes: #286122

  [ Colin Watson ]
  * Move the bulk of the postinst to /usr/bin/grub-installer and
    parameterise all its uses of /target. This makes life easier for
    potential future users of grub-installer in contexts such as live CDs.
  * Remove now-incorrect README, which wasn't exactly very useful to start
    with.

 -- Christian Perrier <bubulle@debian.org>  Wed, 16 Nov 2005 22:42:29 +0100

grub-installer (1.11) unstable; urgency=low

  * Use grub-setup -y option. This is present in sarge, but not woody so we
    loose woody grub install support now.
  * Use log-output.

  [ Updated translations ]
  * Catalan (ca.po) by Guillem Jover
  * German (de.po) by Holger Wansing
  * Greek, Modern (1453-) (el.po) by Greek Translation Team
  * Esperanto (eo.po) by Serge Leblanc
  * Spanish (es.po) by Javier Fernández-Sanguino Peña
  * Italian (it.po) by Giuseppe Sacco
  * Japanese (ja.po) by Kenshi Muto
  * Kurdish (ku.po) by Erdal Ronahi
  * Lithuanian (lt.po) by Kęstutis Biliūnas
  * Macedonian (mk.po) by Georgi Stanojevski
  * Bokmål, Norwegian (nb.po) by Bjørn Steensrud
  * Dutch (nl.po) by Bart Cornelis
  * Polish (pl.po) by Bartosz Fenski
  * Portuguese (Brazil) (pt_BR.po) by André Luís Lopes
  * Romanian (ro.po) by Eddy Petrisor
  * Russian (ru.po) by Yuri Kozlov
  * Slovenian (sl.po) by Jure Čuhalev
  * Ukrainian (uk.po) by Eugeniy Meshcheryakov
  * Wolof (wo.po) by Mouhamadou Mamoune Mbacke

 -- Joey Hess <joeyh@debian.org>  Mon, 26 Sep 2005 17:24:36 +0200

grub-installer (1.10) unstable; urgency=low

  * Colin Watson
    - Change "new Debian system" to "new system", and "installation of
      Debian" to "new installation", to reduce branding problems for
      derivatives.
  * Matt Kraai
    - Fix the spelling of "boot loader".

  * Updated translations: 
    - Bulgarian (bg.po) by Ognyan Kulev
    - Catalan (ca.po) by Guillem Jover
    - Czech (cs.po) by Miroslav Kure