@@ -1,1 +1,2 @@
 grub-installer usr/bin
+functions.sh usr/share/grub-installer
