@@ -12,6 +12,8 @@ else
 	chroot=
 fi
 
+. /usr/share/grub-installer/functions.sh
+
 newline="
 "
 
@@ -169,23 +171,6 @@ hurd_convert () {
 	echo "$dr_type${dr_num}s$dr_part"
 }
 
-# Make sure mtab in the chroot reflects the currently mounted partitions.
-update_mtab() {
-	[ "$ROOT" ] || return
-
-	mtab=$ROOT/etc/mtab
-	grep "$ROOT" /proc/mounts | (
-	while read devpath mountpoint fstype options n1 n2 ; do
-		devpath=`mapdevfs $devpath || echo $devpath`
-		mountpoint=`echo $mountpoint | sed "s%^$ROOT%%"`
-		# The sed line removes the mount point for root.
-		if [ -z "$mountpoint" ] ; then
-			mountpoint="/"
-		fi
-		echo $devpath $mountpoint $fstype $options $n1 $n2
-	done ) > $mtab
-}
-
 # Run update-grub in $ROOT.
 update_grub () {
 	if ! log-output -t grub-installer $chroot $ROOT /sbin/update-grub -y ; then
@@ -195,10 +180,6 @@ update_grub () {
 		db_progress STOP
 		exit 1
 	fi
-}
-
-is_floppy () {
-	echo "$1" | grep -q '(fd' || echo "$1" | grep -q "/dev/fd" || echo "$1" | grep -q floppy
 }
 
 findfstype () {
